--- a/Framework_Design/pom.xml
+++ b/Framework_Design/pom.xml
@@ -37,8 +37,35 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>3.17</version>
 		</dependency>
-
-
-
 	</dependencies>
+
+	<build>
+		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M4</version>
+				<configuration>
+
+					<suiteXmlFiles>
+						<suiteXmlFile>XML Files/${xmlFiles}</suiteXmlFile>
+					</suiteXmlFiles>
+
+					<systemPropertyVariables>
+						<executionBrowser>${browser}</executionBrowser>
+						<appURL>${urlToBeTested}</appURL>
+
+
+					</systemPropertyVariables>
+
+
+				</configuration>
+			</plugin>
+
+		</plugins>
+
+
+	</build>
+
 </project>
